# web_home_work_2

./: Dockerfile  logs.txt  pyproject.toml
